--- a/docs/vocs/docs/pages/book/guest-libraries/ruint.mdx
+++ b/docs/vocs/docs/pages/book/guest-libraries/ruint.mdx
@@ -7,7 +7,7 @@ The Ruint guest library is a fork of [ruint](https://github.com/recmo/uint) that
 See the full example [here](https://github.com/openvm-org/openvm/blob/main/examples/u256/src/main.rs).
 
 ```rust,no_run,noplayground
-// [!include ~/docs/snippets/examples/u256/src/main.rs]
+// [!include docs/snippets/examples/u256/src/main.rs]
 ```
 
 To be able to import the `U256` struct, add the following to your `Cargo.toml` file:
@@ -21,7 +21,7 @@ openvm-ruint = { git = "https://github.com/openvm-org/openvm.git", package = "ru
 See the full example [here](https://github.com/openvm-org/openvm/blob/main/examples/i256/src/main.rs).
 
 ```rust,no_run,noplayground
-// [!include ~/docs/snippets/examples/i256/src/main.rs]
+// [!include docs/snippets/examples/i256/src/main.rs]
 ```
 
 To be able to import the `I256` struct, add the following to your `Cargo.toml` file:
