--- a/docs/vocs/docs/pages/book/guest-libraries/sha2.mdx
+++ b/docs/vocs/docs/pages/book/guest-libraries/sha2.mdx
@@ -18,8 +18,8 @@ See the full example [here](https://github.com/openvm-org/openvm/blob/main/examp
 ### Example
 
 ```rust,no_run,noplayground
-// [!include ~/docs/snippets/examples/sha256/src/main.rs:imports]
-// [!include ~/docs/snippets/examples/sha256/src/main.rs:main]
+// [!include docs/snippets/examples/sha256/src/main.rs:imports]
+// [!include docs/snippets/examples/sha256/src/main.rs:main]
 ```
 
 To be able to import the `sha256` function, add the following to your `Cargo.toml` file:
