feat: fix snippets

--- a/docs/vocs/docs/pages/book/acceleration-using-extensions/algebra.mdx
+++ b/docs/vocs/docs/pages/book/acceleration-using-extensions/algebra.mdx
@@ -106,8 +106,8 @@ Also, each modulus in `[app_vm_config.fp2]` must be paired with the name of the 
 
 Here is a toy example using both the modular arithmetic and complex field extension capabilities:
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/algebra/src/main.rs]
+```rust
+// [!include ~/snippets/examples/algebra/src/main.rs]
 ```
 
 To have the correct imports for the above example, add the following to the `Cargo.toml` file:
