--- a/docs/vocs/docs/pages/book/guest-libraries/keccak256.mdx
+++ b/docs/vocs/docs/pages/book/guest-libraries/keccak256.mdx
@@ -9,9 +9,9 @@ See the full example [here](https://github.com/openvm-org/openvm/blob/main/examp
 
 ## Example
 
-```rust,no_run,noplayground
-// [!include ~/docs/docs/snippets/examples/keccak/src/main.rs:imports]
-// [!include ~/docs/docs/snippets/examples/keccak/src/main.rs:main]
+```rust
+// [!include ~/snippets/examples/keccak/src/main.rs:imports]
+// [!include ~/snippets/examples/keccak/src/main.rs:main]
 ```
 
 To be able to import the `keccak256` function, add the following to your `Cargo.toml` file:
