--- a/docs/vocs/docs/pages/book/guest-libraries/ruint.mdx
+++ b/docs/vocs/docs/pages/book/guest-libraries/ruint.mdx
@@ -6,8 +6,8 @@ The Ruint guest library is a fork of [ruint](https://github.com/recmo/uint) that
 
 See the full example [here](https://github.com/openvm-org/openvm/blob/main/examples/u256/src/main.rs).
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/u256/src/main.rs]
+```rust
+// [!include ~/snippets/examples/u256/src/main.rs]
 ```
 
 To be able to import the `U256` struct, add the following to your `Cargo.toml` file:
@@ -20,8 +20,8 @@ openvm-ruint = { git = "https://github.com/openvm-org/openvm.git", package = "ru
 
 See the full example [here](https://github.com/openvm-org/openvm/blob/main/examples/i256/src/main.rs).
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/i256/src/main.rs]
+```rust
+// [!include ~/snippets/examples/i256/src/main.rs]
 ```
 
 To be able to import the `I256` struct, add the following to your `Cargo.toml` file:
