--- a/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
+++ b/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
@@ -8,27 +8,27 @@ For more information on the basic CLI flow, see [Overview of Basic Usage](/book/
 
 If you have a guest program and would like to try running the **host program** specified in the next section, you can do so by adding the following imports and setup at the top of the file. You may need to modify the imports and/or the `SomeStruct` struct to match your program.
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/sdk_app.rs:dependencies]
+```rust
+// [!include ~/snippets/examples/sdk_app.rs:dependencies]
 ```
 
 ## Building and Transpiling a Program
 
 The SDK provides lower-level control over the building and transpiling process.
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/sdk_app.rs:build]
-// [!include docs/snippets/examples/sdk_app.rs:read_elf]
+```rust
+// [!include ~/snippets/examples/sdk_app.rs:build]
+// [!include ~/snippets/examples/sdk_app.rs:read_elf]
 
-// [!include docs/snippets/examples/sdk_app.rs:transpilation]
+// [!include ~/snippets/examples/sdk_app.rs:transpilation]
 ```
 
 ### Using `SdkVmConfig`
 
 The `SdkVmConfig` struct allows you to specify the extensions and system configuration your VM will use. To customize your own configuration, you can use the `SdkVmConfig::builder()` method and set the extensions and system configuration you want.
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/sdk_app.rs:vm_config]
+```rust
+// [!include ~/snippets/examples/sdk_app.rs:vm_config]
 ```
 
 > ℹ️
@@ -38,8 +38,8 @@ The `SdkVmConfig` struct allows you to specify the extensions and system configu
 
 To run your program and see the public value output, you can do the following:
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/sdk_app.rs:execution]
+```rust
+// [!include ~/snippets/examples/sdk_app.rs:execution]
 ```
 
 ### Using `StdIn`
@@ -62,8 +62,8 @@ There are two types of proofs that you can generate, with the sections below con
 
 After building and transpiling a program, you can then generate a proof. To do so, you need to commit your `VmExe`, generate an `AppProvingKey`, format your input into `StdIn`, and then generate a proof.
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/sdk_app.rs:proof_generation]
+```rust
+// [!include ~/snippets/examples/sdk_app.rs:proof_generation]
 ```
 
 For large guest programs, the program will be proved in multiple continuation segments and the returned `proof: ContinuationVmProof` object consists of multiple STARK proofs, one for each segment.
@@ -72,8 +72,8 @@ For large guest programs, the program will be proved in multiple continuation se
 
 After generating a proof, you can verify it. To do so, you need your verifying key (which you can get from your `AppProvingKey`) and the output of your `generate_app_proof` call.
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/sdk_app.rs:verification]
+```rust
+// [!include ~/snippets/examples/sdk_app.rs:verification]
 ```
 
 ## EVM Proof
@@ -93,8 +93,8 @@ cargo openvm setup
 <details>
 <summary>Also note that there are additional dependencies for the EVM Proof flow. Click here to view.</summary>
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/sdk_app.rs:dependencies]
+```rust
+// [!include ~/snippets/examples/sdk_app.rs:dependencies]
 ```
 
 </details>
@@ -103,8 +103,8 @@ cargo openvm setup
 
 Now, you'll need to generate the app proving key for the next step.
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/sdk_evm.rs:keygen]
+```rust
+// [!include ~/snippets/examples/sdk_evm.rs:keygen]
 ```
 
 > ⚠️ **WARNING**
@@ -117,8 +117,8 @@ You can now run the aggregation keygen, proof, and verification functions for th
 
 **Note**: you **do not** need to generate the app proof with the `generate_app_proof` function, as the EVM proof function will handle this automatically.
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/sdk_evm.rs:evm_verification]
+```rust
+// [!include ~/snippets/examples/sdk_evm.rs:evm_verification]
 ```
 
 > ⚠️ **WARNING**
