--- a/docs/vocs/docs/pages/book/guest-libraries/k256.mdx
+++ b/docs/vocs/docs/pages/book/guest-libraries/k256.mdx
@@ -19,17 +19,17 @@ The guest library provides a `Secp256k1Coord`, which represents a field element 
 
 The K256 guest library handles the "Declare" phase described in [Optimizing Modular Arithmetic](/book/acceleration-using-extensions/overview#optimizing-modular-arithmetic). The consuming guest program is responsible for running the "Init" phase via `openvm::init!()`.
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/ecc/src/main.rs:imports]
-// [!include docs/snippets/examples/ecc/src/main.rs:init]
+```rust
+// [!include ~/snippets/examples/ecc/src/main.rs:imports]
+// [!include ~/snippets/examples/ecc/src/main.rs:init]
 ```
 
 `moduli_init!` is called for both the coordinate and scalar field because they were declared in the `k256` module, although we will not be using the scalar field below.
 
 With the above we can start doing elliptic curve operations like adding points:
 
-```rust,no_run,noplayground
-// [!include docs/snippets/examples/ecc/src/main.rs:main]
+```rust
+// [!include ~/snippets/examples/ecc/src/main.rs:main]
 ```
 
 ### Config parameters
