--- a/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
+++ b/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
@@ -9,7 +9,7 @@ For more information on the basic CLI flow, see [Overview of Basic Usage](/book/
 If you have a guest program and would like to try running the **host program** specified in the next section, you can do so by adding the following imports and setup at the top of the file. You may need to modify the imports and/or the `SomeStruct` struct to match your program.
 
 ```rust
-// [!include ~/snippets/examples/sdk_app.rs:dependencies]
+// [!include ~/snippets/examples_sdk/sdk_stark.rs:dependencies]
 ```
 
 ## Building and Transpiling a Program
@@ -17,10 +17,10 @@ If you have a guest program and would like to try running the **host program** s
 The SDK provides lower-level control over the building and transpiling process.
 
 ```rust
-// [!include ~/snippets/examples/sdk_app.rs:build]
-// [!include ~/snippets/examples/sdk_app.rs:read_elf]
+// [!include ~/snippets/examples_sdk/sdk_stark.rs:build]
+// [!include ~/snippets/examples_sdk/sdk_stark.rs:read_elf]
 
-// [!include ~/snippets/examples/sdk_app.rs:transpilation]
+// [!include ~/snippets/examples_sdk/sdk_stark.rs:transpilation]
 ```
 
 ### Using `SdkVmConfig`
@@ -28,7 +28,12 @@ The SDK provides lower-level control over the building and transpiling process.
 The `SdkVmConfig` struct allows you to specify the extensions and system configuration your VM will use. To customize your own configuration, you can use the `SdkVmConfig::builder()` method and set the extensions and system configuration you want.
 
 ```rust
-// [!include ~/snippets/examples/sdk_app.rs:vm_config]
+    let vm_config = SdkVmConfig::builder()
+        .system(Default::default())
+        .rv32i(Default::default())
+        .rv32m(Default::default())
+        .io(Default::default())
+        .build();
 ```
 
 > ℹ️
@@ -39,7 +44,7 @@ The `SdkVmConfig` struct allows you to specify the extensions and system configu
 To run your program and see the public value output, you can do the following:
 
 ```rust
-// [!include ~/snippets/examples/sdk_app.rs:execution]
+// [!include ~/snippets/examples_sdk/sdk_stark.rs:execution]
 ```
 
 ### Using `StdIn`
@@ -53,27 +58,27 @@ The `StdIn` struct allows you to format any serializable type into a VM-readable
 
 There are two types of proofs that you can generate, with the sections below continuing from this point.
 
-- [App Proof](#app-proof): Generates STARK proof(s) of the guest program
+- [STARK Proof](#stark-proof): Generates a STARK proof of the guest program
 - [EVM Proof](#evm-proof): Generates a halo2 proof that can be posted on-chain
 
-## App Proof
+## STARK Proof
 
-### Generating App Proofs
+### Generating STARK Proofs
 
-After building and transpiling a program, you can then generate a proof. To do so, you need to commit your `VmExe`, generate an `AppProvingKey`, format your input into `StdIn`, and then generate a proof.
+After building and transpiling a program, you can then generate a proof. To do so, you need to commit your `VmExe`, format your input into `StdIn`, and then generate a proof.
 
 ```rust
-// [!include ~/snippets/examples/sdk_app.rs:proof_generation]
+// [!include ~/snippets/examples_sdk/sdk_stark.rs:proof_generation]
 ```
 
 For large guest programs, the program will be proved in multiple continuation segments and the returned `proof: ContinuationVmProof` object consists of multiple STARK proofs, one for each segment.
 
-### Verifying App Proofs
+### Verifying STARK Proofs
 
-After generating a proof, you can verify it. To do so, you need your verifying key (which you can get from your `AppProvingKey`) and the output of your `generate_app_proof` call.
+After generating a proof, you can verify it. To do so, you need your verifying key and the output of your `generate_app_proof` call.
 
 ```rust
-// [!include ~/snippets/examples/sdk_app.rs:verification]
+// [!include ~/snippets/examples_sdk/sdk_stark.rs:verification]
 ```
 
 ## EVM Proof
@@ -94,31 +99,19 @@ cargo openvm setup
 <summary>Also note that there are additional dependencies for the EVM Proof flow. Click here to view.</summary>
 
 ```rust
-// [!include ~/snippets/examples/sdk_app.rs:dependencies]
+// [!include ~/snippets/examples_sdk/sdk_evm.rs:dependencies]
 ```
 
 </details>
-
-### Keygen
-
-Now, you'll need to generate the app proving key for the next step.
-
-```rust
-// [!include ~/snippets/examples/sdk_evm.rs:keygen]
-```
-
-> ⚠️ **WARNING**
->
-> If you have run `cargo openvm setup` and don't need a specialized aggregation configuration, consider deserializing the proving key from the file `~/.openvm/agg.pk` instead of generating it, to save computation.
 
 ### EVM Proof Generation and Verification
 
 You can now run the aggregation keygen, proof, and verification functions for the EVM proof.
 
-**Note**: you **do not** need to generate the app proof with the `generate_app_proof` function, as the EVM proof function will handle this automatically.
+**Note**: you **do not** need to generate the STARK proof with the `prove` function, as the EVM proof function will handle this automatically.
 
 ```rust
-// [!include ~/snippets/examples/sdk_evm.rs:evm_verification]
+// [!include ~/snippets/examples_sdk/sdk_evm.rs:evm_verification]
 ```
 
 > ⚠️ **WARNING**
