feat: note --evm flag for cargo openvm setup

--- a/docs/vocs/docs/pages/book/writing-apps/overview.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/overview.mdx
@@ -69,7 +69,7 @@ The process above details the workflow necessary to build, prove, and verify a g
 To do (a), you need to run the following command. If you've run it previously on your machine, there is no need to do so again. This will write files necessary for EVM proving in `~/.openvm/`.
 
 ```bash
-cargo openvm setup
+cargo openvm setup --evm
 ```
 
 > ⚠️ **WARNING**
