--- a/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
+++ b/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
@@ -89,12 +89,12 @@ After generating a proof, you can verify it. To do so, you need your verifying k
 To generate an EVM proof, you'll first need to ensure that you have followed the [CLI installation steps](/book/getting-started/install). get the appropriate KZG params by running the following command.
 
 ```bash
-cargo openvm setup
+cargo openvm setup --evm
 ```
 
 > ⚠️ **WARNING**
 >
-> `cargo openvm setup` requires very large amounts of computation and memory (~200 GB).
+> `cargo openvm setup --evm` requires very large amounts of computation and memory (~200 GB).
 
 <details>
 <summary>Also note that there are additional dependencies for the EVM Proof flow. Click here to view.</summary>
@@ -118,4 +118,4 @@ You can now run the aggregation keygen, proof, and verification functions for th
 > ⚠️ **WARNING**
 > The aggregation proving key `agg_pk` above is large. Avoid cloning it if possible.
 
-Note that `DEFAULT_PARAMS_DIR` is the directory where Halo2 parameters are stored by the `cargo openvm setup` CLI command. For more information on the setup process, see the `EVM Level` section of the [verify](/book/writing-apps/verifying-proofs) doc.
+Note that `DEFAULT_PARAMS_DIR` is the directory where Halo2 parameters are stored by the `cargo openvm setup --evm` CLI command. For more information on the setup process, see the `EVM Level` section of the [verify](/book/writing-apps/verifying-proofs) doc.
