fix: remove stray http

--- a/docs/vocs/docs/pages/book/getting-started/install.mdx
+++ b/docs/vocs/docs/pages/book/getting-started/install.mdx
@@ -9,7 +9,7 @@ approach, you should make sure you have installed the necessary [Prerequisites](
 Begin the installation:
 
 ```bash
-cargo +1.86 install --locked --git http://github.com/openvm-org/openvm.git --tag v1.4.0-rc.4 cargo-openvm
+cargo +1.86 install --locked --git https://github.com/openvm-org/openvm.git --tag v1.4.0-rc.4 cargo-openvm
 ```
 
 This will globally install `cargo-openvm`. You can validate a successful installation with:
