feat: address comments

--- a/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
+++ b/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
@@ -33,7 +33,8 @@ The `SdkVmConfig` struct allows you to specify the extensions and system configu
         .rv32i(Default::default())
         .rv32m(Default::default())
         .io(Default::default())
-        .build();
+        .build()
+        .optimize();
 ```
 
 > ℹ️
