chore: add xcode-select --install

--- a/docs/vocs/docs/pages/book/getting-started/install.mdx
+++ b/docs/vocs/docs/pages/book/getting-started/install.mdx
@@ -64,5 +64,6 @@ rustup install nightly-2025-02-14
 rustup component add rust-src --toolchain nightly-2025-02-14
 
 # install build tools for macOS
+xcode-select --install
 brew install cmake git curl
 ```
