--- a/docs/vocs/docs/pages/book/getting-started/install.mdx
+++ b/docs/vocs/docs/pages/book/getting-started/install.mdx
@@ -1,15 +1,15 @@
 # Install
 
-To use OpenVM for generating proofs, you must install the OpenVM command line tool `cargo-openvm`.
-
-`cargo-openvm` can be installed in two different ways. You can either install via git URL or build from source.
+To use OpenVM for generating proofs, you must install the OpenVM command line tool `cargo-openvm`
+either via Git URL or by cloning the repo and building from source manually. Prior to either
+approach, you should make sure you have installed the necessary [Prerequisites](#installation-prerequisites).
 
 ## Option 1: Install Via Git URL (Recommended)
 
 Begin the installation:
 
 ```bash
-cargo +1.86 install --locked --git http://github.com/openvm-org/openvm.git --tag v1.4.0-rc.4 cargo-openvm
+cargo +1.86 install --locked --git https://github.com/openvm-org/openvm.git --tag v1.4.0-rc.4 cargo-openvm
 ```
 
 This will globally install `cargo-openvm`. You can validate a successful installation with:
@@ -34,11 +34,36 @@ This will globally install `cargo-openvm`. You can validate a successful install
 cargo openvm --version
 ```
 
-## Install Rust Toolchain
+## Installation Prerequisites
 
-In order for the `cargo-openvm` build command to work, you must install certain Rust nightly components:
+Prior to installing `cargo-openvm`, make sure you have the following packages installed:
 
-```bash
+:::code-group
+
+```bash [Ubuntu]
+# install Rust
+curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+. "$HOME/.cargo/env"
+
+# install nightly Rust toolchain for binary builds
 rustup install nightly-2025-02-14
 rustup component add rust-src --toolchain nightly-2025-02-14
+
+# install build tools for Ubuntu
+sudo apt update
+sudo apt install -y build-essential   # gcc, g++, make, libc headers
+```
+
+```bash [macOS]
+# install Rust
+curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+. "$HOME/.cargo/env"
+
+# install nightly Rust toolchain for binary builds
+rustup install nightly-2025-02-14
+rustup component add rust-src --toolchain nightly-2025-02-14
+
+# install build tools for macOS
+xcode-select --install
+brew install cmake git curl
 ```
