chore: bring boxes into vocs format

--- a/docs/vocs/docs/pages/book/writing-apps/overview.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/overview.mdx
@@ -72,8 +72,9 @@ To do (a), you need to run the following command. If you've run it previously on
 cargo openvm setup --evm
 ```
 
-> ⚠️ **WARNING**
-> This command requires very large amounts of computation and memory (~200 GB).
+:::warning
+This command requires very large amounts of computation and memory (~200 GB).
+:::
 
 To do (b), you simply need to replace `app` in `cargo openvm prove` and `cargo openvm verify` as such:
 
