--- a/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
+++ b/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
@@ -37,8 +37,9 @@ The `SdkVmConfig` struct allows you to specify the extensions and system configu
         .optimize();
 ```
 
-> ℹ️
-> When using Rust to write the guest program, the VM system configuration should keep the default value `pointer_max_bits = 29` to match the hardcoded memory limit of the memory allocator. Otherwise, the guest program may fail due to out of bounds memory access in the VM.
+:::info
+When using Rust to write the guest program, the VM system configuration should keep the default value `pointer_max_bits = 29` to match the hardcoded memory limit of the memory allocator. Otherwise, the guest program may fail due to out of bounds memory access in the VM.
+:::
 
 ## Running a Program
 
@@ -52,8 +53,10 @@ To run your program and see the public value output, you can do the following:
 
 The `StdIn` struct allows you to format any serializable type into a VM-readable format by passing in a reference to your struct into `StdIn::write` as above. You also have the option to pass in a `&[u8]` into `StdIn::write_bytes`, or a `&[F]` into `StdIn::write_field` where `F` is the `openvm_stark_sdk::p3_baby_bear::BabyBear` field type.
 
-> **Generating CLI Bytes**
-> To get the VM byte representation of a serializable struct `data` (i.e. for use in the CLI), you can print out the result of `openvm::serde::to_vec(data).unwrap()` in a Rust host program.
+:::info
+**Generating CLI Bytes**
+To get the VM byte representation of a serializable struct `data` (i.e. for use in the CLI), you can print out the result of `openvm::serde::to_vec(data).unwrap()` in a Rust host program.
+:::
 
 ## Generating and Verifying Proofs
 
@@ -92,9 +95,9 @@ To generate an EVM proof, you'll first need to ensure that you have followed the
 cargo openvm setup --evm
 ```
 
-> ⚠️ **WARNING**
->
-> `cargo openvm setup --evm` requires very large amounts of computation and memory (~200 GB).
+:::warning
+`cargo openvm setup --evm` requires very large amounts of computation and memory (~200 GB).
+:::
 
 <details>
 <summary>Also note that there are additional dependencies for the EVM Proof flow. Click here to view.</summary>
@@ -115,7 +118,8 @@ You can now run the aggregation keygen, proof, and verification functions for th
 // [!include ~/snippets/examples_sdk/sdk_evm.rs:evm_verification]
 ```
 
-> ⚠️ **WARNING**
-> The aggregation proving key `agg_pk` above is large. Avoid cloning it if possible.
+:::warning
+The aggregation proving key `agg_pk` above is large. Avoid cloning it if possible.
+:::
 
 Note that `DEFAULT_PARAMS_DIR` is the directory where Halo2 parameters are stored by the `cargo openvm setup --evm` CLI command. For more information on the setup process, see the `EVM Level` section of the [verify](/book/writing-apps/verifying-proofs) doc.
