chore: change compiling file name

--- a/docs/vocs/docs/pages/book/writing-apps/overview.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/overview.mdx
@@ -22,7 +22,7 @@ cargo openvm run --input <path_to_input | hex_string>
 
 Note if your program doesn't require inputs, you can omit the `--input` flag.
 
-For more information see the [build](./compiling) and [run](./running-a-program) docs.
+For more information see the [build](/book/writing-apps/compiling-a-program) and [run](/book/writing-apps/running-a-program) docs.
 
 ### Inputs
 
@@ -50,7 +50,7 @@ cargo openvm prove app --input <path_to_input | hex_string>
 
 Again, if your program doesn't require inputs, you can omit the `--input` flag.
 
-For more information on the `keygen` and `prove` commands, see the [prove](./generating-proofs) doc.
+For more information on the `keygen` and `prove` commands, see the [prove](/book/writing-apps/generating-proofs) doc.
 
 ## Verifying a Proof
 
@@ -60,7 +60,7 @@ To verify a proof using the CLI, you need to provide the verifying key and the p
 cargo openvm verify app
 ```
 
-For more information on the `verify` command, see the [verify](./verifying-proofs) doc.
+For more information on the `verify` command, see the [verify](/book/writing-apps/verifying-proofs) doc.
 
 ## End-to-end EVM Proof Generation and Verification
 
