feat: update generating proofs section

--- a/docs/vocs/docs/pages/book/writing-apps/compiling-a-program.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/compiling-a-program.mdx
@@ -32,7 +32,7 @@ the VM configuration using the following CLI command:
 cargo openvm commit
 ```
 
-This will generate a `*.commit.json` file in `[TARGET_DIR]/openvm/release/` containing:
+This will generate a `*.commit.json` file in `${target_dir}/openvm/release/` containing:
 
 - `app_exe_commit`: A commitment to the OpenVM program binary.
 - `app_vm_commit`: A commitment to the OpenVM configuration used for the program binary.
