--- a/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
@@ -3,17 +3,22 @@
 Generating a proof using the CLI is simple - first generate a key, then generate your proof. Using command defaults, this looks like:
 
 ```bash
-cargo openvm keygen
-cargo openvm prove [app | stark | evm]
+cargo openvm keygen         # generate proving and verification keys for app proofs
+cargo openvm prove app      # generate the app proof
+
+cargo openvm setup          # generate proving and verification keys for STARK aggregation
+cargo openvm prove stark    # generate the STARK proof
+
+cargo openvm setup --evm    # generate proving and verification keys for EVM proofs
+cargo openvm prove evm      # generate the EVM proof
 ```
 
-## Key Generation
+## Application Key Generation
 
 The `keygen` command generates both an application proving and verification key.
 
 ```bash
-cargo openvm keygen
-    --config <path_to_app_config>
+cargo openvm keygen --config <path_to_app_config>
 ```
 
 Similarly to `build`, `run`, and `prove`, options `--manifest-path`, `--target-dir`, and `--output-dir` are provided.
@@ -21,6 +26,18 @@ Similarly to `build`, `run`, and `prove`, options `--manifest-path`, `--target-d
 If `--config` is not specified, the command will search for `openvm.toml` in the manifest directory. If the file isn't found, a default configuration will be used.
 
 The proving and verification key will be written to `${target_dir}/openvm/` (and `--output-dir` if specified).
+
+## STARK and EVM Key Generation
+
+The `setup` command generates proving and verification keys for STARK aggregation and EVM proofs.
+
+```bash
+cargo openvm setup [--evm]
+```
+
+If called without the `--evm` flag, it will generate keys for the leaf, internal, and root STARK
+verifiers as detailed in the [specs](/specs/architecture/continuations). If called with the `--evm`
+flag, it will also generate keys for the [static verifier wrapper](/specs/architecture/continuations#static-verifier-wrapper).
 
 ## Proof Generation
 
@@ -42,22 +59,10 @@ If your program doesn't require inputs, you can (and should) omit the `--input` 
 
 If `--proof` is not provided then the command will write the proof to `./${bin_name}.[app | stark | evm].proof` by default, where `bin_name` is the file stem of the executable run.
 
-The `app` subcommand generates an application-level proof, the `stark` command generates an aggregated root-level proof, while the `evm` command generates an end-to-end EVM proof. For more information on aggregation, see [this specification](https://github.com/openvm-org/openvm/blob/bf8df90b13f4e80bb76dbb71f255a12154c84838/docs/specs/continuations.md).
+The `app` subcommand generates an application-level proof, the `stark` command generates an aggregated root-level proof, while the `evm` command generates an end-to-end EVM proof. For more information on aggregation, see [this specification](https://github.com/openvm-org/openvm/blob/bf8df90b13f4e80bb76dbb71f255a12154c84838/docs/specs/continuations.md). See [EVM Proof Format](./verifying-proofs#evm-proof-json-format) for details on the output format for `cargo openvm prove evm`.
 
 :::warning
-In order to run the `evm` subcommand, you must have previously called the costly `cargo openvm setup --evm`, which requires very large amounts of computation and memory (~200 GB).
+The `stark` subcommand requires STARK aggregation key generation to have been run via
+`cargo openvm setup`, and the `evm` subcommand requires EVM key generation to have been run via
+`cargo openvm setup --evm`, which has very large compute and memory requirements (~200 GB).
 :::
-
-See [EVM Proof Format](./verifying-proofs#evm-proof-json-format) for details on the output format for `cargo openvm prove evm`.
-
-## Commit Hashes
-
-To see the commit hash for an executable, you may run:
-
-```bash
-cargo openvm commit
-    --app-pk <path_to_app_pk>
-    --exe <path_to_transpiled_program>
-```
-
-The `commit` command has all the auxiliary options that `prove` does, and outputs Bn254 commits for both your executable and VM. Commits are written to `${target_dir}/openvm/` (and `--output-dir` if specified).
