--- a/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
@@ -39,6 +39,55 @@ If called without the `--evm` flag, it will generate keys for the leaf, internal
 verifiers as detailed in the [specs](/specs/architecture/continuations). If called with the `--evm`
 flag, it will also generate keys for the [static verifier wrapper](/specs/architecture/continuations#static-verifier-wrapper).
 
+### Details on EVM Verification
+
+In addition to generating EVM proving and verification keys, `cargo openvm setup --evm` also
+generates a smart contract verifier for EVM chains. Upon a successful run, the command will write the files
+
+- `agg.pk`
+- `halo2/src/[OPENVM_VERSION]/Halo2Verifier.sol`
+- `halo2/src/[OPENVM_VERSION]/OpenVmHalo2Verifier.sol`
+- `halo2/src/[OPENVM_VERSION]/interfaces/IOpenVmHalo2Verifier.sol`
+- `halo2/src/[OPENVM_VERSION]/verifier.bytecode.json`
+
+to `~/.openvm/`, where `~` is the directory specified by environment variable `$HOME` and 
+`OPENVM_VERSION` is the version of OpenVM. Every command that requires these files will 
+look for them in this directory. The smart contract verifier is also available via the
+[OpenVM Solidity SDK](/book/writing-apps/solidity-sdk) for released versions of OpenVM.
+
+The `agg.pk` contains all aggregation proving keys necessary for aggregating to a final EVM proof.
+The `OpenVmHalo2Verifier.sol` file contains a Solidity contract to verify the final EVM proof. The contract is named `OpenVmHalo2Verifier` and it implements the `IOpenVmHalo2Verifier` interface.
+
+```solidity [IOpenVmHalo2Verifier.sol]
+interface IOpenVmHalo2Verifier {
+    function verify(bytes calldata publicValues, bytes calldata proofData, bytes32 appExeCommit, bytes32 appVmCommit)
+        external
+        view;
+}
+```
+
+In addition, the command outputs a JSON file `verifier.bytecode.json` of the form
+
+```json [verifier.bytecode.json]
+{
+    "sol_compiler_version": "0.8.19",
+    "sol_compiler_options": "",
+    "bytecode": "0x..."
+}
+```
+
+where `sol_compiler_version` is the Solidity compiler version used to compile the contract (currently `0.8.19`),
+`sol_compiler_options` are additional compiler options used, and
+`bytecode` is the compiled EVM bytecode as a hex string.
+
+:::note
+Note that `cargo openvm setup --evm` downloads auxiliary files for halo2 KZG parameters from an AWS S3 bucket into `~/.openvm/`.
+:::
+
+:::warning
+If the `$HOME` environment variable is not set, this command may fail. This command requires very large amounts of computation and memory (~200 GB) and can take ~20mins on a `m6a.16xlarge` instance due to the keygen time.
+:::
+
 ## Proof Generation
 
 The `prove` CLI command, at its core, uses the options below. `prove` gets access to all of the options that `run` has (see [Running a Program](/book/writing-apps/running-a-program) for more information).
