--- a/docs/vocs/docs/pages/book/writing-apps/verifying-proofs.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/verifying-proofs.mdx
@@ -16,78 +16,6 @@ If you omit `--proof`, the command will search the working directory for files w
 
 ## EVM Level
 
-EVM level proof setup requires large amounts of computation and memory (~200GB). It is recommended to run this process on a server.
-
-### Install Solc
-
-Install  `solc` `0.8.19` using `svm`
-
-```bash
-# Install svm
-cargo install --version 0.5.7 svm-rs
-# Add the binary to your path
-export PATH="$HOME/.cargo/bin:$PATH"
-
-# Install solc 0.8.19
-svm install 0.8.19
-svm use 0.8.19
-```
-
-### Generating the Aggregation Proving Key and EVM Verifier Contract
-
-The workflow for generating an end-to-end EVM proof requires first generating an aggregation proving key and EVM verifier contract. This can be done by running the following command:
-
-```bash
-cargo openvm setup --evm
-```
-
-Note that `cargo openvm setup --evm` may attempt to download other files (i.e. KZG parameters) from an AWS S3 bucket into `~/.openvm/`.
-
-This command can take ~20mins on a `m6a.16xlarge` instance due to the keygen time.
-
-Upon a successful run, the command will write the files
-
-- `agg.pk`
-- `halo2/src/[OPENVM_VERSION]/Halo2Verifier.sol`
-- `halo2/src/[OPENVM_VERSION]/OpenVmHalo2Verifier.sol`
-- `halo2/src/[OPENVM_VERSION]/interfaces/IOpenVmHalo2Verifier.sol`
-- `halo2/src/[OPENVM_VERSION]/verifier.bytecode.json`
-
-to `~/.openvm/`, where `~` is the directory specified by environment variable `$HOME` and `OPENVM_VERSION` is the version of OpenVM. Every command that requires these files will look for them in this directory.
-
-The `agg.pk` contains all aggregation proving keys necessary for aggregating to a final EVM proof.
-The `OpenVmHalo2Verifier.sol` file contains a Solidity contract to verify the final EVM proof. The contract is named `OpenVmHalo2Verifier` and it implements the `IOpenVmHalo2Verifier` interface.
-
-```solidity
-interface IOpenVmHalo2Verifier {
-    function verify(bytes calldata publicValues, bytes calldata proofData, bytes32 appExeCommit, bytes32 appVmCommit)
-        external
-        view;
-}
-```
-
-In addition, the command outputs a JSON file `verifier.bytecode.json` of the form
-
-```json
-{
-    "sol_compiler_version": "0.8.19",
-    "sol_compiler_options": "",
-    "bytecode": "0x..."
-}
-```
-
-where `sol_compiler_version` is the Solidity compiler version used to compile the contract (currently fixed to `0.8.19`),
-`sol_compiler_options` are additional compiler options used, and
-`bytecode` is the compiled EVM bytecode as a hex string.
-
-> ⚠️ **WARNING**
->
-> If the `$HOME` environment variable is not set, this command may fail.
->
-> This command requires very large amounts of computation and memory (~200 GB).
-
-## Generating and Verifying an EVM Proof
-
 To generate and verify an EVM proof, you need to run the following commands:
 
 ```bash
@@ -101,7 +29,7 @@ If `proof` is omitted, the `verify` command will search for a file with extensio
 
 The EVM proof is written as a JSON of the following format:
 
-```json
+```json [evm.proof.json]
 {
   "app_exe_commit": "0x..",
   "app_vm_commit": "0x..",
