feat: add verify stark

--- a/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
@@ -85,7 +85,7 @@ Note that `cargo openvm setup --evm` downloads auxiliary files for halo2 KZG par
 :::
 
 :::warning
-If the `$HOME` environment variable is not set, this command may fail. This command requires very large amounts of computation and memory (~200 GB) and can take ~20mins on a `m6a.16xlarge` instance due to the keygen time.
+If the `$HOME` environment variable is not set, this command may fail. This command requires large amounts of compute and memory (~200 GB) and can take ~6mins on a `m6a.16xlarge` instance.
 :::
 
 ## Proof Generation
