--- a/docs/vocs/docs/pages/book/writing-apps/writing-a-program.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/writing-a-program.mdx
@@ -1,14 +1,13 @@
 # Writing a Program
 
-## Writing a guest program
-
-To initialize an OpenVM guest program package, you can use the following CLI command:
+To initialize an OpenVM guest program project, you can use the following CLI command:
 
 ```bash
 cargo openvm init
 ```
 
-For a guest program example, see this [fibonacci program](https://github.com/openvm-org/openvm-example-fibonacci). More examples can be found in the [benchmarks/guest](https://github.com/openvm-org/openvm/tree/main/benchmarks/guest) directory.
+This will initialize a new Rust project, and you can start writing your program in `src/main.rs`.
+For a guest program example, see this [Fibonacci program](https://github.com/openvm-org/openvm-example-fibonacci). More examples can be found in the [benchmarks/guest](https://github.com/openvm-org/openvm/tree/main/benchmarks/guest) directory.
 
 ## Handling I/O
 
