chore: update wording

--- a/docs/vocs/docs/pages/book/getting-started/quickstart.mdx
+++ b/docs/vocs/docs/pages/book/getting-started/quickstart.mdx
@@ -89,7 +89,7 @@ The process should exit with no errors.
 
 ## Runtime Execution
 
-If necessary, the executable can also be run _without_ proof generation. This can be useful for testing purposes.
+The OpenVM binary can also be executed without generating a proof, which can be useful for testing purposes.
 
 ```bash
 cargo openvm run --input "0x010A00000000000000"
