--- a/docs/vocs/docs/pages/book/writing-apps/overview.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/overview.mdx
@@ -74,7 +74,7 @@ For more information on the `verify` command, see the [verify](/book/writing-app
 
 The process above details the workflow necessary to build, prove, and verify a guest program at 
 the application level. As described in the [specs](/specs/architecture/continuations), OpenVM supports
-proof aggregation into a single STARK proof or an EVM proof. Preforming this aggregation requires
+proof aggregation into a single STARK proof or an EVM proof. Performing this aggregation requires
 key generation for the aggregation proving keys and the EVM verifier contract, which is done by:
 
 ```bash
